_mocha/asia_2025_try1/plant/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: plant
  namespace: green-tree
spec:
  selector:
    app: plant
  type: ClusterIP
  ports:
  - name: plant
    protocol: TCP
    port: 8080
    targetPort: 8080
