_mocha/asia_2025_try1/plant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green
  namespace: green-tree
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: green
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 error text"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /plant
        pathType: Prefix
        backend:
          service:
            name: plant
            port:
              number: 8080
      - path: /grow
        pathType: Prefix
        backend:
          service:
            name: grow
            port:
              number: 8080
