_mocha/asia_2025_try1/plant/oneshot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  plant
  namespace: green-tree
  labels:
    app:  plant
spec:
  selector:
    matchLabels:
      app: plant
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  plant
    spec:
      serviceAccountName: plant
      containers:
      - name:  plant
        image: 471208936033.dkr.ecr.ap-northeast-2.amazonaws.com/plant:v1
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "10"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1
            memory: 1024Mi
        ports:
        - containerPort: 8080
          name:  plant
          
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: plant
  namespace: green-tree
spec:
  selector:
    app: plant
  type: ClusterIP
  ports:
  - name: plant
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green
  namespace: green-tree
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: green
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 error text"}}
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /plant
        pathType: Prefix
        backend:
          service:
            name: plant
            port:
              number: 8080
      - path: /grow
        pathType: Prefix
        backend:
          service:
            name: grow
            port:
              number: 8080
